  - Fix multiple calls to update_po breaking packaging. BZ #891167
  - Add website labels and translations. BZ #979885
  - Add orgname to block/inline code. BZ #872955
  - Fix get_keywords not using correct info file. BZ #957956
  - Improve web print CSS. BZ #927513
  - Fix pre border in PDF. BZ #905752
  - Fix epub DOCTYPE. BZ #875129

3.1.5 Mon Mar 18 2013
  - Fix translated PDF encode issue when build from packaged books. BZ #922618

3.1.4 Tue Mar 12 2013
  - Fix entities in Book_Info braking build. BZ #917898
  - add translations of "Revision History". BZ #918365
  - Fix TOC title not translated in PDF. BZ #918365
  - Fix translated strings with parameters. BZ #891166
  - update translations
  - add it-IT translation of PUG via <fedora@marionline.it> BZ #797515

3.1.3 Fri Feb 22 2013
  - Fix add_revision breaking XML parser. BZ #912985
  - Stronger fix for cover pages causing page number overrun. BZ #912967
  - Fix CSS for article front page subtitle. BZ #913016

3.1.2 Tue Feb 19 2013
  - Fix tests failing when publican not installed. BZ #908956
  - Fix broken mr-IN/Conventions.po. BZ #908956
  - Fix footnote link unclickable. BZ #909006
  - Fix missing translations for common files. BZ #908976
  - Fix using edition for version on cover pages. BZ #912180
  - Fix nested entities causing XML::TreeBuilder to fail. BZ #912187
  - Fix for cover pages causing page number overrun. BZ #912967

3.1.1 Thu Feb 07 2013
  - Fix web site CSS for admonitions breaking layout for books built on P3.0. BZ #908539

3.1.0 Wed Feb 06 2013
  - Add Interlingua support from Nik Kalach <nik.kalach@inbox.ru> BZ #863899
  - Replace hard coded paths with Publican::ConfigData. BZ #661946
  - Ensure Publican source builds and tests without Publican being installed. BZ #874180
  - Fix broken menu alignment. BZ #880621
  - Ensure clean_ids doesn't change owner or group. BZ #854425
  - Fix incorrect Revision order. BZ #845432