@@ -1663,6 +1663,10 @@ div.toc > dl > dt {
 	vertical-align: middle;
 }
 
+li.step > a:first-child {
+	display: none;
+}
+
 .stepalternatives {
 	list-style-image: none;
 	list-style-type: upper-alpha;
