@@ -11,6 +11,7 @@
   - Improve web print CSS. BZ #927513
   - Fix pre border in PDF. BZ #905752
   - Fix epub DOCTYPE. BZ #875129
+  - Fix step first child style. BZ #971221
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
